Prevent page from overflowing when loading spinner gets displayed

--- a/src/styles/ProjectOverview.css
+++ b/src/styles/ProjectOverview.css
@@ -1,6 +1,5 @@
 @supports (scrollbar-gutter: stable) {
     .project-overview {
-      overflow-y: auto;
       scrollbar-gutter: stable;
     }
 }
